tolk-tester/tests/invalid-syntax/err-3208.tolk
fun main() {
    return address("0:gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg");
}

/**
@compilation_should_fail
@stderr invalid standard address
 */
